--- a/views/user_space.html
+++ b/views/user_space.html
@@ -65,7 +65,8 @@
                 .then((data) => { console.log(data); })
                 .catch((err) => console.log(err))
             }
-        } else {
+        }
+        else {
              console.log("No Match");
              document.getElementById('wrong').style.display = "block";
         }
