Updates to the about and help pages

--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
 <body id="about" style="background-color: #DFE4E8; width: 100%">
     <div class="container-fluid" id="primary">
         <h1 id="page-header"> About Us</h1>
-        <p>Welcome to Surv-Yay! This is our About Us page.</p>
+        <p dir="ltr" style="line-height:2.4;margin-top:0pt;margin-bottom:0pt;"><span style="font-size:18pt;font-family:'Droid Sans',sans-serif;color:#000000;background-color:transparent;font-weight:400;font-style:normal;font-variant:normal;text-decoration:none;vertical-align:baseline;white-space:pre;white-space:pre-wrap;">Surv-Yay! Your one stop shop for creating a surveying project for any of your needs. Designed for consistency with ease of access in mind, Surv-Yay! provides you with everything you need to gather data. Feel free to click into our tabs and see the amazing features of our site.</span></p>
         <br>
         <h2>Our Team</h2>
         <p>This is the information regarding the developers of the Surv-Yay site.</p>
