Updated About and Login
Minor edits to login and fixed size issue for info boxes in About Us

--- a/views/about.html
+++ b/views/about.html
@@ -20,7 +20,7 @@
             <!--Tori's Info-->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img src="https://media.licdn.com/dms/image/C4D03AQGpGRQnnXYI0g/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=fDxwvzI0h5IcIBiiWiJIR1twm3Yc_8Lrtr0fg_C_xYQ" alt="Victoria Cameron" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0"> Victoria Cameron </h5><span class="small text-uppercase text-muted"> Information Systems </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <h5 class="mb-0"> Victoria </h5><h5 class="mb-0"> Cameron </h5><span class="small text-uppercase text-muted"> Info Systems </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/victoria-cameron-912693135/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/victoria-cameron" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
@@ -32,7 +32,7 @@
             <!--Hannah's Info-->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img src="https://media.licdn.com/dms/image/C4D03AQGXN3PZf6wNWw/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=bLrP8Yofd4eiH3vxYMECFoQuMEdPNIDr4bxPvJGt-pU" alt="Hannah Dougherty" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0"> Hannah Dougherty </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <h5 class="mb-0"> Hannah </h5><h5 class="mb-0"> Dougherty </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/hannah-dougherty-54018714b/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/handough" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
@@ -44,7 +44,7 @@
             <!--Leslie's Info-->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img src="https://media.licdn.com/dms/image/C4D03AQEHMjSFOaz2eQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=QpzkoTg5ZbY_AZIkiH419suNX6ttkeIQzZgwcJU00fU" alt="Leslie Flores" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0"> Leslie Flores </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <h5 class="mb-0"> Leslie </h5><h5 class="mb-0"> Flores </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/leslie-j-flores/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/Leslie-Flores" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
@@ -56,7 +56,7 @@
             <!--Molly's Info-->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img src="https://media.licdn.com/dms/image/C4D03AQE1BfGiqWumPQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=4ijipIpEYkfh_got2mr9D10G8tgu7nHOtts7s_1JzZ4" alt="Molly Smith" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0"> Molly Smith </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <h5 class="mb-0"> Molly </h5><h5 class="mb-0"> Smith </h5><span class="small text-uppercase text-muted"> Computer Science </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/molly-smith-3b9450151/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="https://github.com/mollysmith4" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
@@ -68,7 +68,7 @@
             <!--Mike's Info-->
             <div class="bg-white rounded shadow-sm py-5 px-4">
                 <img src="https://media.licdn.com/dms/image/C4E03AQEevCzG5achxQ/profile-displayphoto-shrink_200_200/0?e=1579132800&v=beta&t=zybuhj3brP4B_dNXoGn2lUcmtuEq2Kg4x_lyD4SjnoY" alt="Mike Macaluso" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
-                <h5 class="mb-0"> Mike Macaluso </h5><span class="small text-uppercase text-muted"> Information Technology </span><br><span class="small text-uppercase text-muted"> Marist College </span>
+                <h5 class="mb-0"> Mike </h5><h5 class="mb-0"> Macaluso </h5><span class="small text-uppercase text-muted"> Info Technology </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/mike-macaluso-728842176/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
                     <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
