--- a/views/about.html
+++ b/views/about.html
@@ -71,7 +71,7 @@
                 <h5 class="mb-0"> Mike </h5><h5 class="mb-0"> Macaluso </h5><span class="small text-uppercase text-muted"> Information </span><br><span class="small text-uppercase text-muted"> Technology </span><br><span class="small text-uppercase text-muted"> Marist College </span>
                 <ul class="social mb-0 list-inline mt-3">
                     <li class="list-inline-item"><a href="https://www.linkedin.com/in/mike-macaluso-728842176/" target="_blank" class="social-link"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="list-inline-item"><a href="#" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
+                    <li class="list-inline-item"><a href="https://github.com/MikeMac101" target="_blank" class="social-link"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
         </div>
