fixed double line issue under titles

--- a/views/fill_survey.html
+++ b/views/fill_survey.html
@@ -7,7 +7,7 @@
     </head>
     <body id="fill_survey" onload="getSurveysURL()" style="background-color: #DFE4E8; width: 100%">
         <div class="container-fluid" id="primary_fill_survey">
-            <h1 class="page-header">Fill Survey</h1>
+            <h1 class="page-header" id="pageheader">Fill Survey</h1>
             <h3>Select the survey you will be filling.</h3>
             
             <!--TABLE OF ALL THE AVAILABLE SURVEYS-->
@@ -23,7 +23,7 @@
         </div>
 
         <div class="container-fluid" id="secondary_fill_survey">
-            <h1 id="titleOfSurvey"></h1>
+            <h2 id="titleOfSurvey"></h2>
             <h3>Interview Title:</h3>
             <input type="text" id="inteTitle"><br><br>
             <!--FORM OF SINGLE SURVEY-->
